Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-2128

lib GO tests fail with funct ends without a return statement

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.9.1
    • 0.9.1
    • Go - Compiler, Go - Library
    • None

    Description

      gopath/src/lib/go/test/NamespacedTest/namespaced_service.go:131: function ends without a return statement
      make[1]: *** [check] Error 2
      gopath/src/IncludesTest/complex_map_service.go:138: function ends without a return statement
      make[1]: *** [check] Error 2

      Attachments

        Activity

          People

            jfarrell Jake Farrell
            jfarrell Jake Farrell
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: