THRIFT-2128: lib GO tests fail with funct ends without a return statement Client: go Patch: jfarrell

Fix issue with go tests failing in go1 in the process function.